--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,6 +15,7 @@
         >
 
         <ImageView
+            android:id="@+id/left_arrow"
             android:layout_width="20dp"
             android:layout_height="20dp"
             android:layout_marginTop="20dp"
@@ -34,12 +35,12 @@
             android:textSize="24sp" />
 
         <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="70dp"
+            android:layout_width="110dp"
+            android:layout_height="49dp"
             android:layout_marginLeft="20dp"
+            android:layout_marginTop="70dp"
             android:fontFamily="@font/alfa_slab_one"
-            android:text="Jacktone."
+            android:text="John."
             android:textSize="20sp" />
 
         <LinearLayout
@@ -87,6 +88,7 @@
                 android:paddingEnd="16dp"
                 android:paddingBottom="8dp"
                 android:scrollbars="none">
+
 
                 <LinearLayout
                     android:layout_width="wrap_content"
@@ -241,6 +243,7 @@
             android:orientation="horizontal">
 
             <ImageView
+                android:id="@+id/task"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
                 android:layout_marginLeft="33dp"
@@ -249,6 +252,7 @@
                 app:srcCompat="@drawable/task" />
 
             <ImageView
+                android:id="@+id/calendar"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
                 android:layout_marginLeft="55dp"
@@ -257,6 +261,7 @@
                 app:srcCompat="@drawable/calendar" />
 
             <ImageView
+                android:id="@+id/bell"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
                 android:layout_marginLeft="55dp"
@@ -265,6 +270,7 @@
                 app:srcCompat="@drawable/bell" />
 
             <ImageView
+                android:id="@+id/user"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
                 android:layout_marginLeft="55dp"
