--- a/app/src/main/res/layout/activity_main_user_login.xml
+++ b/app/src/main/res/layout/activity_main_user_login.xml
@@ -1,94 +1,119 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/neutral"
     tools:context=".MainUserLogin">
 
-    <ImageView
-        android:layout_width="370dp"
-        android:layout_height="200dp"
-        android:padding="40dp"
-        android:layout_marginLeft="12dp"
-        android:layout_marginTop="150dp"
-        android:scaleType="centerCrop"
-        app:srcCompat="@drawable/remotrack" />
+    <!-- Logo Image -->
+
+    <!-- Input Fields Section -->
+
+    <!-- Decorative Image -->
+
 
     <ImageView
-        android:layout_width="200dp"
-        android:layout_height="200dp"
-
-        android:scaleType="centerCrop"
-        app:srcCompat="@drawable/assisremote" />
+        android:id="@+id/assisremote"
+        android:layout_width="401dp"
+        android:layout_height="84dp"
+        android:layout_marginTop="100dp"
+        android:scaleType="centerInside"
+        android:src="@drawable/remotrack" />
 
     <ImageView
-        android:layout_width="200dp"
-        android:layout_height="200dp"
-        android:layout_marginTop="600dp"
-        android:layout_marginLeft="200dp"
-        android:background="@drawable/circular_shape"
+        android:layout_width="119dp"
+        android:layout_height="114dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
         android:scaleType="centerCrop"
-        app:srcCompat="@drawable/coworker1" />
+        android:src="@drawable/assisremote" />
 
-
-    <com.google.android.material.card.MaterialCardView
-        android:id="@+id/card"
-        style="?attr/materialCardViewFilledStyle"
-        android:layout_width="330dp"
+    <LinearLayout
+        android:id="@+id/input_section"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        app:cardBackgroundColor="@color/white">
+        android:layout_below="@drawable/assisremote"
+        android:layout_marginTop="200dp"
+        android:background="@android:color/white"
+        android:orientation="vertical"
+        android:padding="16dp">
 
-        <LinearLayout
+
+        <com.google.android.material.textfield.TextInputLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:padding="16dp">
+            android:layout_marginBottom="16dp"
+            android:hint="Enter email"
+            app:boxBackgroundColor="@android:color/white"
+            app:boxBackgroundMode="outline"
+            app:boxStrokeColor="@color/colorPrimary"
+            app:hintTextColor="@color/colorPrimary">
 
-            <com.google.android.material.textfield.TextInputLayout
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/useremail1"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Enter name">
-
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/useremail1"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:inputType="text"
-                    android:background="@null"
-                    android:singleLine="true"
-                    android:textColorHint="@color/black"
-                    android:textColor="@color/black"/>
-            </com.google.android.material.textfield.TextInputLayout>
-
-            <com.google.android.material.textfield.TextInputLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="Enter password"
-                android:layout_marginTop="16dp">
-
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/userpassword1"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:inputType="textPassword"
-                    android:background="@null"
-                    android:singleLine="true"
-                    android:textColorHint="@color/black"
-                    android:textColor="@color/black"/>
-            </com.google.android.material.textfield.TextInputLayout>
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:layout_marginTop="16dp"
-                android:text="Don't have an account? Sign up here"
+                android:background="@null"
+                android:inputType="textEmailAddress"
+                android:singleLine="true"
                 android:textColor="@color/black"
-                android:textStyle="italic"/>
-        </LinearLayout>
+                android:textColorHint="@color/black" />
+        </com.google.android.material.textfield.TextInputLayout>
 
-    </com.google.android.material.card.MaterialCardView>
+        <com.google.android.material.textfield.TextInputLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="16dp"
+            android:hint="Enter password"
+            app:boxBackgroundColor="@android:color/white"
+            app:boxBackgroundMode="outline"
+            app:boxStrokeColor="@color/colorPrimary"
+            app:hintTextColor="@color/colorPrimary">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/userpassword1"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@null"
+                android:inputType="textPassword"
+                android:singleLine="true"
+                android:textColor="@color/black"
+                android:textColorHint="@color/black" />
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <CheckBox
+            android:id="@+id/remember_password"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Remember Password"
+            android:textColor="@color/black" />
+
+        <Button
+            android:id="@+id/login_button"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:backgroundTint="@color/black"
+            android:text="Login"
+            android:textColor="@android:color/white" />
+
+        <Button
+            android:id="@+id/register_button"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:backgroundTint="@color/black"
+            android:onClick="onRegisterButtonClick"
+            android:text="Register here"
+            android:textColor="@android:color/white" />
+    </LinearLayout>
+
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="139dp"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="12dp"
+        android:src="@drawable/coworker1" />
 
 </RelativeLayout>
