--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,5 +5,7 @@
     <color name="neutral">#F1EFE7</color>
     <color name="grey">#A6A6A6</color>
     <color name="dark">#222222</color>
+    <color name="colorPrimary">#3F51B5</color>
+
 
 </resources>
