--- a/app/src/main/res/layout/activity_main_user_login.xml
+++ b/app/src/main/res/layout/activity_main_user_login.xml
@@ -1,17 +1,10 @@
+<?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/neutral"
     tools:context=".MainUserLogin">
-
-    <!-- Logo Image -->
-
-    <!-- Input Fields Section -->
-
-    <!-- Decorative Image -->
-
 
     <ImageView
         android:id="@+id/assisremote"
@@ -33,22 +26,17 @@
         android:id="@+id/input_section"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@drawable/assisremote"
-        android:layout_marginTop="200dp"
+        android:layout_below="@id/assisremote"
+        android:layout_marginTop="20dp"
         android:background="@android:color/white"
         android:orientation="vertical"
         android:padding="16dp">
-
 
         <com.google.android.material.textfield.TextInputLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="16dp"
-            android:hint="Enter email"
-            app:boxBackgroundColor="@android:color/white"
-            app:boxBackgroundMode="outline"
-            app:boxStrokeColor="@color/colorPrimary"
-            app:hintTextColor="@color/colorPrimary">
+            android:hint="Enter email">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/useremail1"
@@ -65,11 +53,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="16dp"
-            android:hint="Enter password"
-            app:boxBackgroundColor="@android:color/white"
-            app:boxBackgroundMode="outline"
-            app:boxStrokeColor="@color/colorPrimary"
-            app:hintTextColor="@color/colorPrimary">
+            android:hint="Enter password">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/userpassword1"
@@ -103,8 +87,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
-            android:backgroundTint="@color/black"
-            android:onClick="onRegisterButtonClick"
             android:text="Register here"
             android:textColor="@android:color/white" />
     </LinearLayout>
