--- a/app/src/main/res/layout/activity_assign_task.xml
+++ b/app/src/main/res/layout/activity_assign_task.xml
@@ -1,7 +1,55 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+
+    <com.google.android.material.card.MaterialCardView
+        android:id="@+id/card"
+        style="?attr/materialCardViewFilledStyle"
+        android:layout_width="420dp"
+        android:layout_height="130dp"
+        app:cardBackgroundColor="@color/grey">
+
+        <ImageView
+            android:id="@+id/left_arrow"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginLeft="20dp"
+            android:scaleType="centerCrop"
+            android:src="@drawable/leftarrow"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="40dp"
+            android:layout_marginLeft="20dp"
+            android:fontFamily="@font/alfa_slab_one"
+            android:text="Assign Task"
+            android:textSize="29sp"/>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <ImageView
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_marginLeft="320dp"
+                android:layout_marginTop="25dp"
+                android:background="@drawable/circular_shape"
+                android:clipToOutline="true"
+                android:scaleType="centerCrop"
+                android:src="@drawable/user"/>
+        </LinearLayout>
+    </com.google.android.material.card.MaterialCardView>
+
+    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_marginTop="131dp"
+    android:layout_height="542dp"
     android:background="@color/neutral"
     android:padding="16dp">
 
@@ -189,3 +237,57 @@
         </RelativeLayout>
     </LinearLayout>
 </ScrollView>
+
+    <com.google.android.material.card.MaterialCardView
+        android:id="@+id/card2"
+        style="?attr/materialCardViewFilledStyle"
+        android:layout_width="420dp"
+        android:layout_height="150dp"
+        android:layout_marginTop="675dp"
+        app:cardBackgroundColor="@color/grey">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/task"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_marginLeft="33dp"
+                android:layout_marginTop="15dp"
+                android:scaleType="centerCrop"
+                app:srcCompat="@drawable/task"/>
+
+            <ImageView
+                android:id="@+id/barchart"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_marginLeft="55dp"
+                android:layout_marginTop="15dp"
+                android:scaleType="centerCrop"
+                app:srcCompat="@drawable/barchart"/>
+
+            <ImageView
+                android:id="@+id/bell"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_marginLeft="55dp"
+                android:layout_marginTop="15dp"
+                android:scaleType="centerCrop"
+                app:srcCompat="@drawable/bell"/>
+
+            <ImageView
+                android:id="@+id/user"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_marginLeft="55dp"
+                android:layout_marginTop="15dp"
+                android:scaleType="centerCrop"
+                app:srcCompat="@drawable/user"/>
+        </LinearLayout>
+    </com.google.android.material.card.MaterialCardView>
+
+</RelativeLayout>
+
