--- a/app/src/main/res/layout/activity_schedule_task.xml
+++ b/app/src/main/res/layout/activity_schedule_task.xml
@@ -1,8 +1,64 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/neutral">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    >
+
+
+    <com.google.android.material.card.MaterialCardView
+        android:id="@+id/card"
+        style="?attr/materialCardViewFilledStyle"
+        android:layout_width="420dp"
+        android:layout_height="130dp"
+        app:cardBackgroundColor="@color/neutral"
+        >
+
+        <ImageView
+            android:id="@+id/left_arrow"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginLeft="20dp"
+            android:scaleType="centerCrop"
+            android:src="@drawable/leftarrow"
+            />
+
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="40dp"
+            android:layout_marginLeft="20dp"
+            android:fontFamily="@font/alfa_slab_one"
+            android:text="Schedule Task"
+            android:textSize="29dp" />
+
+
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <ImageView
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_marginLeft="320dp"
+                android:layout_marginTop="25dp"
+                android:background="@drawable/circular_shape"
+                android:clipToOutline="true"
+                android:scaleType="centerCrop"
+                android:src="@drawable/user" />
+        </LinearLayout>
+
+    </com.google.android.material.card.MaterialCardView>
+
+    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="542dp"
+    android:layout_marginTop="131dp"
+    android:background="@color/white">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -10,16 +66,6 @@
         android:padding="16dp">
 
         <!-- Page Title -->
-        <TextView
-            android:id="@+id/text_title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Schedule Task"
-            android:textSize="24sp"
-            android:textStyle="bold"
-            android:textColor="@android:color/black"
-            android:layout_centerHorizontal="true"
-            android:layout_marginBottom="16dp" />
 
         <!-- Task Name -->
         <TextView
@@ -30,7 +76,6 @@
             android:textSize="18sp"
             android:textStyle="bold"
             android:textColor="@android:color/black"
-            android:layout_below="@id/text_title"
             android:layout_marginTop="16dp" />
 
         <EditText
@@ -119,3 +164,59 @@
 
     </RelativeLayout>
 </ScrollView>
+
+    <com.google.android.material.card.MaterialCardView
+        android:id="@+id/card2"
+        style="?attr/materialCardViewFilledStyle"
+        android:layout_width="420dp"
+        android:layout_height="150dp"
+        android:layout_marginTop="675dp"
+        app:cardBackgroundColor="@color/neutral"
+        >
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/task"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_marginLeft="33dp"
+                android:layout_marginTop="15dp"
+                android:scaleType="centerCrop"
+                app:srcCompat="@drawable/task" />
+
+            <ImageView
+                android:id="@+id/calendar"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_marginLeft="55dp"
+                android:layout_marginTop="15dp"
+                android:scaleType="centerCrop"
+                app:srcCompat="@drawable/calendar" />
+
+            <ImageView
+                android:id="@+id/bell"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_marginLeft="55dp"
+                android:layout_marginTop="15dp"
+                android:scaleType="centerCrop"
+                app:srcCompat="@drawable/bell" />
+
+            <ImageView
+                android:id="@+id/user"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_marginLeft="55dp"
+                android:layout_marginTop="15dp"
+                android:scaleType="centerCrop"
+                app:srcCompat="@drawable/user" />
+        </LinearLayout>
+
+    </com.google.android.material.card.MaterialCardView>
+
+
+</RelativeLayout>
