Profile changes and modifications commit

--- a/app/src/main/res/layout/activity_adminprofile.xml
+++ b/app/src/main/res/layout/activity_adminprofile.xml
@@ -4,11 +4,12 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
+
     <com.google.android.material.card.MaterialCardView
         android:id="@+id/card"
         style="?attr/materialCardViewFilledStyle"
         android:layout_width="420dp"
-        android:layout_height="130dp"
+        android:layout_height="180dp"
         app:cardBackgroundColor="@color/grey">
 
         <ImageView
@@ -23,33 +24,138 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="40dp"
-            android:layout_marginLeft="20dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginLeft="60dp"
             android:fontFamily="@font/alfa_slab_one"
             android:text="Profile"
-            android:textSize="29sp"/>
+            android:textSize="25sp"/>
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
 
-            <ImageView
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:layout_marginLeft="320dp"
-                android:layout_marginTop="25dp"
-                android:background="@drawable/circular_shape"
-                android:clipToOutline="true"
-                android:scaleType="centerCrop"
-                android:src="@drawable/user"/>
-        </LinearLayout>
+
+
     </com.google.android.material.card.MaterialCardView>
+
+    <ImageView
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_marginLeft="150dp"
+        android:layout_marginTop="100dp"
+        android:background="@drawable/circular_shape"
+        android:clipToOutline="true"
+        android:scaleType="centerCrop"
+        android:src="@drawable/user"/>
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="542dp"
-        android:layout_marginTop="131dp">
+        android:layout_height="500dp"
+        android:layout_marginTop="180dp">
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="40dp"
+                android:layout_marginLeft="50dp"
+                android:fontFamily="@font/alfa_slab_one"
+                android:text="Personal Information"
+                android:textSize="20sp"/>
+
+            <ImageView
+                android:layout_width="300dp"
+                android:layout_height="50dp"
+                android:layout_marginLeft="49dp"
+                android:layout_marginTop="90dp"
+                android:scaleType="centerCrop"
+                app:srcCompat="@drawable/inputsquare"/>
+
+            <TextView
+                android:id="@+id/textinfoname1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="60dp"
+                android:layout_marginTop="102dp"
+                android:text="Personal Information"
+                android:textSize="20sp"
+                android:textStyle="bold" />
+
+            <ImageView
+                android:layout_width="300dp"
+                android:layout_height="50dp"
+                android:layout_marginLeft="49dp"
+                android:layout_marginTop="150dp"
+                android:scaleType="centerCrop"
+                app:srcCompat="@drawable/inputsquare"/>
+
+            <TextView
+                android:id="@+id/textinfoname2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="60dp"
+                android:layout_marginTop="162dp"
+                android:text="Personal Information"
+                android:textStyle="bold"
+                android:textSize="20sp"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="210dp"
+                android:layout_marginLeft="50dp"
+                android:fontFamily="@font/alfa_slab_one"
+                android:text="Organization"
+                android:textSize="20sp"/>
+
+            <ImageView
+                android:layout_width="300dp"
+                android:layout_height="50dp"
+                android:layout_marginLeft="49dp"
+                android:layout_marginTop="260dp"
+                android:scaleType="centerCrop"
+                app:srcCompat="@drawable/inputsquare"/>
+
+            <TextView
+                android:id="@+id/textinfoname3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="60dp"
+                android:layout_marginTop="272dp"
+                android:textStyle="bold"
+                android:text="Personal Information"
+                android:textSize="20sp"/>
+
+            <ImageView
+                android:layout_width="300dp"
+                android:layout_height="50dp"
+                android:layout_marginLeft="49dp"
+                android:layout_marginTop="320dp"
+                android:scaleType="centerCrop"
+                app:srcCompat="@drawable/inputsquare"/>
+
+            <TextView
+                android:id="@+id/textinfoname4"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="60dp"
+                android:layout_marginTop="332dp"
+                android:textStyle="bold"
+                android:text="Personal Information"
+                android:textSize="20sp"/>
+
+            <Button
+                android:id="@+id/logoutbtn"
+                android:layout_width="300dp"
+                android:layout_height="60dp"
+                android:layout_marginLeft="49dp"
+                android:layout_marginTop="400dp"
+                android:backgroundTint="@color/dark"
+                android:textSize="20sp"
+                android:text="Log Out">
+            </Button>
+
+        </RelativeLayout>
 
 
     </ScrollView>
