--- a/app/src/main/res/layout/activity_admin.xml
+++ b/app/src/main/res/layout/activity_admin.xml
@@ -26,6 +26,7 @@
 
 
         <TextView
+            android:id="@+id/userrealtime"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="40dp"
@@ -35,6 +36,7 @@
             android:textSize="24sp" />
 
         <TextView
+            android:id="@+id/userrealname"
             android:layout_width="110dp"
             android:layout_height="49dp"
             android:layout_marginLeft="20dp"
