--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,7 +26,7 @@
 
 
         <TextView
-            android:id="@+id/usercurrenttime"
+            android:id="@+id/userrealtime"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="40dp"
@@ -36,7 +36,7 @@
             android:textSize="24sp" />
 
         <TextView
-            android:id="@+id/username"
+            android:id="@+id/userrealname"
             android:layout_width="110dp"
             android:layout_height="49dp"
             android:layout_marginLeft="20dp"
