--- a/app/src/main/res/layout/activity_admin.xml
+++ b/app/src/main/res/layout/activity_admin.xml
@@ -175,7 +175,16 @@
                 </com.google.android.material.card.MaterialCardView>
             </GridLayout>
 
-
+            <Button
+                android:id="@+id/registeruser"
+                android:layout_width="200dp"
+                android:layout_height="60dp"
+                android:layout_marginLeft="80dp"
+                android:backgroundTint="@color/dark"
+                android:fontFamily="@font/alfa_slab_one"
+                android:text="Register User"
+                android:textColor="@color/grey"
+                android:textSize="15dp" />
 
             <TextView
                 android:layout_width="wrap_content"
