--- a/app/src/main/res/layout/activity_notification.xml
+++ b/app/src/main/res/layout/activity_notification.xml
@@ -2,7 +2,8 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <com.google.android.material.card.MaterialCardView
         android:id="@+id/card"
@@ -46,97 +47,72 @@
         </LinearLayout>
     </com.google.android.material.card.MaterialCardView>
 
-    <ScrollView
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="542dp"
-        android:layout_marginTop="131dp">
+        android:layout_marginTop="130dp"
+        android:layout_height="543dp"
+        tools:context=".NotificationsActivity">
 
-        <RelativeLayout
-            xmlns:android="http://schemas.android.com/apk/res/android"
-            xmlns:app="http://schemas.android.com/apk/res-auto"
-            xmlns:tools="http://schemas.android.com/tools"
+        <!-- Spinner for selecting recipient -->
+        <Spinner
+            android:id="@+id/spinnerRecipients"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            tools:context=".AdminNotificationsActivity">
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginBottom="8dp"
+            android:background="@drawable/inputsquare"
+            android:padding="8dp"
+            android:spinnerMode="dropdown" />
 
-            <!-- Recipient selection -->
-            <LinearLayout
-                android:layout_width="match_parent"
+        <!-- Chat bubbles -->
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recyclerViewMessages"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_below="@id/spinnerRecipients"
+            android:layout_above="@id/messageInputLayout"
+            android:padding="8dp"
+            android:clipToPadding="false"
+            android:scrollbars="vertical"/>
+
+        <!-- Message input layout -->
+        <LinearLayout
+            android:id="@+id/messageInputLayout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:orientation="horizontal"
+            android:padding="8dp"
+            android:background="@android:color/white"
+            android:elevation="4dp">
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:padding="8dp"
-                android:background="@android:color/white"
-                android:elevation="4dp"
-                android:id="@+id/recipientLayout"
-                android:layout_alignParentTop="true">
+                android:layout_weight="1"
+                android:hint="Type a message">
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Send to:"
-                    android:layout_gravity="center_vertical"
-                    android:layout_marginEnd="8dp"/>
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/editTextMessage"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"/>
+            </com.google.android.material.textfield.TextInputLayout>
 
-                <com.google.android.material.textfield.TextInputLayout
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:hint="Select Recipient">
-
-                    <com.google.android.material.textfield.MaterialAutoCompleteTextView
-                        android:id="@+id/spinnerRecipients"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:inputType="none"/>
-                </com.google.android.material.textfield.TextInputLayout>
-            </LinearLayout>
-
-            <!-- Messages list -->
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/recyclerViewMessages"
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_below="@id/recipientLayout"
-                android:layout_above="@+id/messageInputLayout"
-                android:padding="8dp"
-                android:clipToPadding="false"
-                android:scrollbars="vertical"/>
-
-            <!-- Message input layout -->
-            <LinearLayout
-                android:id="@+id/messageInputLayout"
-                android:layout_width="match_parent"
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/buttonSend"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignParentBottom="true"
-                android:orientation="horizontal"
-                android:padding="8dp"
-                android:background="@android:color/white"
-                android:elevation="4dp">
+                android:layout_marginStart="8dp"
+                android:icon="@drawable/send"
 
-                <com.google.android.material.textfield.TextInputLayout
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:hint="Type a message">
+                android:text="Send"
+                android:backgroundTint="@color/design_default_color_primary"/>
+        </LinearLayout>
 
-                    <com.google.android.material.textfield.TextInputEditText
-                        android:id="@+id/editTextMessage"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"/>
-                </com.google.android.material.textfield.TextInputLayout>
-
-                <com.google.android.material.button.MaterialButton
-                    android:id="@+id/buttonSend"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="8dp"
-                    android:icon="@drawable/send"
-
-                    android:text="Send"
-                    android:backgroundTint="@color/design_default_color_primary"/>
-            </LinearLayout>
-        </RelativeLayout>
-    </ScrollView>
+    </RelativeLayout>
 
 
 
